--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,5 +2,7 @@
   %h2= link_to post.title, post
   %p Published at
   = time_ago_in_words(post.created_at)
+  by
+  = post.user.email
   %p
 = link_to "New Post", new_post_path()
