--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.wrapper {
+	width: 50%;
+	max-width: 1100px;
+	margin: 0 auto;
+}
+
+.main_header {
+	width: 60%;
+	max-width: 1100px;
+	margin: 0 auto;	
+}
