creating authentication to the application

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,9 +8,14 @@
 %body
 	%header.main_header
 		#logo
-			%p Project groups
+			%p= link_to "Project groups", root_path
 		%buttons
-			= link_to "New Post", new_post_path()
+			- if user_signed_in?
+				= link_to "New Post", new_post_path()
+			-else
+				=link_to "Sign up", new_user_registration_path
+				=link_to "sign in", new_user_session_path
+
 	.wrapper		
 		%p.notice= notice
 		%p.alert= alert
