--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,6 +1,13 @@
 %h1= @post.title
 %p= @post.content
 
+#comments
+	%h2= @post.comments.count
+	=render @post.comments
+
+	%h3 Reply to the comments
+	= render "comments/form"
+
 = link_to "Edit", edit_post_path(@post)
 = link_to "Delete", post_path(@post), method: :delete, data: { confirm: "are your sure?"}
 = link_to "Home", root_path
