--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,9 +2,10 @@
 - @posts.each do |post|
   .post
   %h2.title= link_to post.title, post
-  %p.date Published at
+  %p.date 
+  Published 
   = time_ago_in_words(post.created_at)
-  by
+  ago by
   = post.user.email
 
   
